--- a/css/style.css
+++ b/css/style.css
@@ -1,86 +1,33 @@
+/* adding style in body */
 body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
+  padding-bottom: 50px;
 }
-.search-field {
-  border: none;
-  border-radius: 50px;
-  padding: 5px;
-  outline: none;
+
+/* setting font size for th element */
+th {
+  font-size: 14px;
 }
-.search-field:hover {
-  outline: none;
-  border: none;
+
+/* customizing the color for star icon */
+.fa-star {
+  color: #fac325;
 }
-.search-box {
-  border: 1px solid rgb(3, 118, 211);
-  width: 281px;
-  border-radius: 5px;
-  margin: auto;
-  margin-top: 50px;
-  border-right: none;
-}
-.search-button {
-  padding: 10px 50px;
-  border-radius: 25px;
-  margin-left: 20px;
-}
-#all-products {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  border: 1px solid black;
-  text-align: center;
-  width: 100%;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-}
-.single-product {
-  padding: 10px;
-  transition: 0.6s;
-}
-.single-product:hover {
-  box-shadow: 4px 4px 7px gray;
-  border-radius: 10px;
-  border: 1px solid cyan;
-}
+
+/* setting custom height and width for product images */
 .product-image {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 130px;
 }
-.cart {
-  width: 350px;
-  border: 1px solid green;
-  padding: 10px;
-  box-shadow: 10px 10px 20px gray;
-  border-radius: 5px;
-  margin-right: 30px;
-  position: fixed;
+
+/* changing the color of card and card footer */
+.card,
+.card-footer {
+  background-color: #f7f7f7;
 }
-.cart-main {
-  padding-right: 30px;
-}
-@media only screen and (max-width: 768px) {
-  #all-products {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-  }
-  .cart {
-    width: 300px;
-    border: 1px solid green;
-    padding: 10px;
-    box-shadow: 10px 10px 20px gray;
-    border-radius: 5px;
-    margin-right: 30px;
-    position: fixed;
-  }
-  .cart-main {
-    padding-right: 10px;
-  }
-}
-@media only screen and (max-width: 468px) {
-  #all-products {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-  }
+
+/* setting custom color for category text */
+.category-text {
+  font-size: 14px;
 }
